--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,10 @@
 html, body, #mapDiv {
-  height: 100%;
-  width: 100%;
+    width: 100%;
+    height: 100%;
+}
+body {
+    padding: 0;
+    margin: 0;
 }
 html {
     font-size: 1em;
