added files and updated files *no code*

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,16 @@
+/* ========================================================================
+ * CSS document for MAG Main Map Page
+ * @main.css | http://
+ * ========================================================================
+ * Copyright 2016 Vern Wolfley
+ * Licensed under MIT
+ * ======================================================================== */
+/*!
+ * ==========================================
+ *  @main.css | version | 1.0.0 | MIT License
+ * ==========================================
+ */
+
 html, body, #mapDiv {
     width: 100%;
     height: 100%;
