added LDS Units to map

--- a/views/about.html
+++ b/views/about.html
@@ -30,8 +30,8 @@
             <h3>Data Source</h3>
             <ul class="legal">
               <li>Grand Canyon Council BSA</li>
-              <li>Aerial Imagery provided by ESRI</li>
-              <li>Street map provided by ESRI</li>
+              <li>Aerial Imagery provided by MapBox</li>
+              <li>Street map provided by MapBox</li>
             </ul>
 
             <p class="legal">Please note that while every effort has been made to ensure the accuracy
@@ -46,7 +46,7 @@
           </address>
           <footer id="footer">
             <div class="container">
-            <p>Copyright &copy; 2016 <a id="mag" title="website link" role="navigation" target="_blank" href="http://www.grandcanyonbsa.org/">Grand Canyon Council</a> | v1.0.1 | 12/30/2015 | <a href="#" data-toggle="modal" data-target="#legalModal">Legal Disclaimer</a></p>
+            <p>Copyright &copy; 2016 <a id="mag" title="website link" role="navigation" target="_blank" href="http://www.grandcanyonbsa.org/">Grand Canyon Council</a> | v1.3.0 | 05/19/2016 | <a href="#" data-toggle="modal" data-target="#legalModal">Legal Disclaimer</a></p>
             </div>
           </footer>
     </div><!-- /.modal-body -->
